--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .page-content {
-    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,8 +19,21 @@
     max-width: 1140px;
 }
 
+
+.section {
+    margin-bottom: 5rem;
+}
+
 .content-title-main {
     margin-bottom: 3rem;
+    .title-main {
+        font-size: 1.6rem;
+        margin-bottom: 0;
+        font-weight: 900;
+        span {
+            color: #4db8ff;
+        }
+    }
 }
 
 .btn {
@@ -65,6 +77,13 @@
     .custom-container {
         padding-left: 7rem;
     }
+
+    .content-title-main {
+        .title-main {
+            font-size: 4rem;
+        }
+    }
+
 }
 @media(min-width: 1400px) {
     .custom-container {
