--- a/src/components/Bubbles/Bubbles.css
+++ b/src/components/Bubbles/Bubbles.css
@@ -24,7 +24,7 @@
     position: fixed;
     width: calc(100% - 7rem);
     margin-left: auto;
-    height: 100dvh;
+    height: 100%;
     overflow: hidden;
     top: 0;
     left: 7rem;
