--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,11 @@ h1, h2, h3, p {
 
 h1 {
   font-weight: 900;
+  line-height: 1;
 }
 h2 {
   font-weight: 700;
+  line-height: 1;
 }
 h3 {
   font-weight: 600;
@@ -38,4 +40,8 @@ a {
   cursor: pointer;
   color: #FBFBFE;
   text-decoration: none;
+}
+
+.text-center {
+  text-align: center;
 }
