--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -42,7 +42,7 @@ ul {
     width: 75px;
     height: 75px;
     overflow: hidden;
-    border: 3px solid #889297;
+    border: 3px solid #dddddd31;
     border-radius: 50%;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
