--- a/src/components/Bubbles/Bubbles.css
+++ b/src/components/Bubbles/Bubbles.css
@@ -30,25 +30,37 @@
     left: 7rem;
     z-index: -2;
   }
+
   
   .bubble {
     position: absolute;
     bottom: -100px;
     background: rgba(255, 255, 255, 0.1);
+    opacity: 0.5;
     border-radius: 50%;
-    animation: rise 10s linear infinite;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    animation: rise 20s ease-out infinite;
+    -webkit-animation: rise 20s ease-out infinite;
   }
   
   @keyframes rise {
     0% {
       transform: translateY(0) scale(1);
-      opacity: 0;
-    }
-    10% {
-      opacity: 0.4;
+      -webkit-transform: translateY(0) scale(1);
+      -moz-transform: translateY(0) scale(1);
+      -ms-transform: translateY(0) scale(1);
+      -o-transform: translateY(0) scale(1);
+      opacity: 0.5;
     }
     100% {
-      transform: translateY(-110vh) scale(1.2);
+      transform: translateY(-120vh) scale(1.2);
+      -webkit-transform: translateY(-120vh) scale(1.2);
+      -moz-transform: translateY(-120vh) scale(1.2);
+      -ms-transform: translateY(-120vh) scale(1.2);
+      -o-transform: translateY(-120vh) scale(1.2);
       opacity: 0;
     }
   }
