--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  background-color: #1C3441;
+  background-color: #0c1825;
   color: #FBFBFE;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
