--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -151,7 +151,8 @@
     .info {
         display: flex;
         flex-direction: column;
-        background: #0c1825;
+        /* background: #0c1825; */
+        background: #1C3441;
         color: #a5b6c2;
         padding: 1rem;
         border-radius: 10px;
