--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -193,6 +193,8 @@
     .card:nth-child(even)>.info>.title::before {
         right: -55px;
         top: 2px;
+        /* box-shadow: 0 0 20px 0 #4db8ff; */
+        box-shadow: 0 0 20px 0 #FFF;
     }
 }
 
