--- a/src/components/Bubbles/Bubbles.css
+++ b/src/components/Bubbles/Bubbles.css
@@ -22,12 +22,12 @@
 
   .bubble-bg {
     position: fixed;
-    width: calc(100% - 7rem);
+    width: 100%;
     margin-left: auto;
     height: 100%;
     overflow: hidden;
     top: 0;
-    left: 7rem;
+    left: 0;
     z-index: -2;
   }
 
@@ -44,6 +44,13 @@
     -o-border-radius: 50%;
     animation: rise 20s ease-out infinite;
     -webkit-animation: rise 20s ease-out infinite;
+  }
+
+  @media(min-width: 1200px) {
+    .bubble-bg {
+      width: calc(100% - 7rem);
+      left: 7rem;
+    }
   }
   
   @keyframes rise {
