--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -202,7 +202,7 @@
         right: -55px;
         top: 2px;
         /* box-shadow: 0 0 20px 0 #4db8ff; */
-        box-shadow: 0 0 20px 0 #FFF;
+        box-shadow: 0 0 20px 5px #FFF;
     }
 }
 
